23/09/2011 Changes

Added indication of instance or class to method compilation. This is useful for handling
instance variable resolution.
Adding storage and methods for recording what variables a class has, instance and class instance.


17/09/2011 Changes

**FIXED** Pathname issues on Windows, Mac and Linux.

14/09/2011 Changes

**FIXED** bug where an instance method called class is not parsed correctly.
This was fixed with a 'hack' where the preprocessor outputs a class method as
'Object _class_ >>' which works, but needs to be changed later.
Removing instanceVariableNames etc from Class.st and adding to the Bootstrapper
so that they're accessible from within other class definitions.
Adding other parts of the "testing" protocol to Object
Adding superClass and inheritsFrom to Behavior.  inheritsFrom is commented out
until we add variable support.
Fixing a pathname issue causing runtime issues in Windows.
Added generation of Character instances.

13/09/2011 Changes

Added support for traditional subclass keywords, plus new shorthand.
Added outstanding super sends.
Added trace output as a guide for TODO items.


12/09/2011 Changes

Added support for cascading message expressions. Tested with unary messages.
Added warning about a possible stack balance problem with cascaded messages. Posted to 
ASM news group to find out if I need to add more code to balance stack.
Added long subclass: keyword support - see examples/st.redline.Subclass.
Adding creation of an Array via Smalltalk - creates a ProtoObject array.
Implementing a few indexable primitives - size, at:, at:with:


11/09/2011 Changes

Changed creation of Integer instances to use single method. Need to make rest of instance
creation use this approach. 
Add back some output when methods are applied - helps with debugging while we wait for 
Transcript support. (Coming later today).
Added method argument load support, so you can reference method arguments. Working on 