@@ -1,3 +1,5 @@
 
 Object < #Example
+	instanceVariableNames: 'instVar1 instVar2'.
+
 
